# Proto

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
protofiler/: __init__.py  config.py  display.py  main.py  models.py  portfolio.py  store.py
protofiler/brokers/: __init__.py  base.py  ib.py  sinopac.py
tests/: conftest.py  test_portfolio.py  test_store.py
