[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "protofiler"
version = "0.1.0"
description = "Portfolio profiler — fetch holdings from multiple brokers and analyze sector allocation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "pydantic>=2",
    "ib_insync>=0.9",
    "shioaji>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-mock>=3",
    "ruff>=0.4",
]

[project.scripts]
protofiler = "protofiler.main:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
